# nexoid-fat-cpp

./: .gitmodules  CMakeLists.txt  Makefile  README.md  cmdline.cpp  cmdline.hpp  dmapi.cpp  eapi.cpp  eapi_dummy_session.cpp  eapi_dummy_session.hpp  eapi_session.hpp  exceptions.hpp  hapi.cpp  main.cpp  nexoconf.c  nexoconf.cpp  nexodata.cpp  nexoid-cpp.supp  papi.cpp  papi_interface.hpp  papi_logic.cpp  papi_logic.hpp  papi_nexui_dummy_session.cpp  papi_nexui_dummy_session.hpp  papi_nexui_nngpp_session.cpp  papi_nexui_nngpp_session.hpp  papi_nexui_session.hpp  pklr.cpp  pklrconfig.cpp  randapi.cpp  scapi.cpp  scapi_internal.hpp  scapi_messages.hpp  scapi_messages_asn1c.cpp  scapi_messages_asn1c.hpp  scapi_nngpp_session.cpp  scapi_nngpp_session.hpp  scapi_session.hpp  scapi_socket_session.cpp  scapi_socket_session.hpp  (+9 more)
ut/: tests.cpp
